try to fix width on small screens

--- a/styles.css
+++ b/styles.css
@@ -11,12 +11,11 @@
     list-style: none;
 }
 
-html {
-    min-width: 100%;
-}
-
 body {
-    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     background-color: #FCF8FE;
 }
 
@@ -72,7 +71,7 @@ h2 {
 
 
 header {
-    width: 100%;
+    min-width: 100%;
     height: 908px;
     padding: 70px 140px 210px;
 
